Fix bootstrap alignment

--- a/app/webpacker/src/stylesheets/prayers.scss
+++ b/app/webpacker/src/stylesheets/prayers.scss
@@ -71,8 +71,3 @@ svg.icon-font-size {
     font-size: 18px;
     font-weight: 600;
 }
-
-#navbarDropdown .img {
-    border-radius: 50%;
-    width: 10%;
-}
